Add aioboto3 dependency

--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -23,6 +23,7 @@ python_requires = >=3.11
 [options.extras_require]
 aws =
     boto3==1.35.0
+    aioboto3==13.3.0
 anthropic =
     anthropic>=0.40.0
 openai =
@@ -33,6 +34,7 @@ all =
     anthropic==0.40.0
     openai==1.55.3
     boto3==1.35.0
+    aioboto3==13.3.0
     libsql-client==0.3.1
 
 [options.packages.find]
